# mplstyles-seaborn

./: .coverage  .gitignore  CLAUDE.md  CODECOV_SETUP.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml  test.yml
examples/: basic_usage.py  comprehensive_demo.py
scripts/: build_styles.py
src/mplstyles_seaborn/: __init__.py  _version.py
src/mplstyles_seaborn/styles/: seaborn-v0_8-dark-bright-notebook.mplstyle  seaborn-v0_8-dark-bright-paper.mplstyle  seaborn-v0_8-dark-bright-poster.mplstyle  seaborn-v0_8-dark-bright-talk.mplstyle  seaborn-v0_8-dark-colorblind-notebook.mplstyle  seaborn-v0_8-dark-colorblind-paper.mplstyle  seaborn-v0_8-dark-colorblind-poster.mplstyle  seaborn-v0_8-dark-colorblind-talk.mplstyle  seaborn-v0_8-dark-dark-notebook.mplstyle  seaborn-v0_8-dark-dark-paper.mplstyle  seaborn-v0_8-dark-dark-poster.mplstyle  seaborn-v0_8-dark-dark-talk.mplstyle  seaborn-v0_8-dark-deep-notebook.mplstyle  seaborn-v0_8-dark-deep-paper.mplstyle  seaborn-v0_8-dark-deep-poster.mplstyle  seaborn-v0_8-dark-deep-talk.mplstyle  seaborn-v0_8-dark-muted-notebook.mplstyle  seaborn-v0_8-dark-muted-paper.mplstyle  seaborn-v0_8-dark-muted-poster.mplstyle  seaborn-v0_8-dark-muted-talk.mplstyle  seaborn-v0_8-dark-pastel-notebook.mplstyle  seaborn-v0_8-dark-pastel-paper.mplstyle  seaborn-v0_8-dark-pastel-poster.mplstyle  seaborn-v0_8-dark-pastel-talk.mplstyle  seaborn-v0_8-darkgrid-bright-notebook.mplstyle  seaborn-v0_8-darkgrid-bright-paper.mplstyle  seaborn-v0_8-darkgrid-bright-poster.mplstyle  seaborn-v0_8-darkgrid-bright-talk.mplstyle  seaborn-v0_8-darkgrid-colorblind-notebook.mplstyle  seaborn-v0_8-darkgrid-colorblind-paper.mplstyle  seaborn-v0_8-darkgrid-colorblind-poster.mplstyle  seaborn-v0_8-darkgrid-colorblind-talk.mplstyle  seaborn-v0_8-darkgrid-dark-notebook.mplstyle  seaborn-v0_8-darkgrid-dark-paper.mplstyle  (+86 more)
tests/: test_performance.py
